--- a/client2.html
+++ b/client2.html
@@ -6,14 +6,6 @@
     <script type="text/javascript">
 
         var socketio = io.connect();
-
-        console.log("Connected!");
-        socket.emit('updateusers', prompt("What's your name?"));
-
-        socket.on('updatechat', function (username, data) {
-            $('#conversation').append('<b>' + socket.id + ':</b> ' + data + '<br>');
-        });
-
         socketio.on("message_to_client", function (data) {
             //Append an HR thematic break and the escaped HTML of the new message
             document.getElementById("chatlog").appendChild(document.createElement("hr"));
@@ -23,16 +15,14 @@
         function sendMessage() {
             var msg = document.getElementById("message_input").value;
             socketio.emit("message_to_server", { message: msg });
-        };
-
-
+        }
 
     </script>
 </head>
 
 <body>
-    <input type="text" id="message_input" />
-    <button onclick="sendMessage()">Send Message</button>
+    <input type=text" id="message_input" />
+    <button onclick="sendMessage()">send</button>
     <div id="chatlog"></div>
 </body>
 
