--- a/client.html
+++ b/client.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 
+
 <head>
+    <link rel="stylesheet" href="stylesheet.css" type="text/css">
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript">
+
 
         var socketio = io.connect();
         var username = " ";
@@ -33,8 +36,6 @@
             console.log("sending to new room");
             let newroom = document.getElementById("newroom_input").value;
             currentroom = newroom;
-            document.getElementById("banlog").style.display = 'block';
-            document.getElementById("kicklog").style.display = 'block';
             socketio.emit("newroom_to_server", { username: username, newroom: newroom });
         };
 
@@ -60,6 +61,8 @@
         socketio.on("newroom_to_client", function (data) {
             console.log("Roomname" + data["roomname"]);
             console.log("Users" + data["users"]);
+            document.getElementById("banlog").style.display = 'block';
+            document.getElementById("kicklog").style.display = 'block';
             document.getElementById("chatlog").appendChild(document.createElement("hr"));
             document.getElementById("chatlog").appendChild(document.createTextNode(data["roomname"] + " has been created and entereed by " + data["users"]));
         });
@@ -79,7 +82,12 @@
 
         socketio.on("badinput_to_client", function (data) {
             document.getElementById("chatlog").appendChild(document.createElement("hr"));
-            document.getElementById("chatlog").appendChild(document.createTextNode(data["data"] + " does not exist "));
+            document.getElementById("chatlog").appendChild(document.createTextNode(" Input does not exist "));
+        });
+
+        socketio.on("room_already_exists_to_client", function (data) {
+            document.getElementById("chatlog").appendChild(document.createElement("hr"));
+            document.getElementById("chatlog").appendChild(document.createTextNode(data["roomname"] + " already exists please enter a different roomname or join room"));
         });
 
         socketio.on("kick_to_client", function (data) {
@@ -122,7 +130,7 @@
 
     <div id="newroomlog" style="display:none">
         <input type="text" id="newroom_input" />
-        <button onclick="sendNewRoom()">Enter Room Name</button>
+        <button onclick="sendNewRoom()"> Enter Room You Want to Create </button>
     </div>
 
     <div id="joinroomlog" style="display: none">
@@ -131,12 +139,12 @@
     </div>
 
     <div id="banlog" style="display: none">
-        <input type="text" id="ban_input" placeholder="Name of Individ" />
+        <input type="text" id="ban_input" />
         <button onclick="sendBan()">Enter Individual You Want to Ban</button>
     </div>
 
     <div id="kicklog" style="display: none">
-        <input type="text" id="kick_input" placeholder="Name of Individ" />
+        <input type="text" id="kick_input" />
         <button onclick="sendKick()">Enter Individual You Want to Kick</button>
     </div>
 </body>
