--- a/client.html
+++ b/client.html
@@ -3,6 +3,7 @@
 
 
 <head>
+    <title> ChatRoom </title>
     <link rel="stylesheet" href="stylesheet.css" type="text/css">
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript">
@@ -23,11 +24,12 @@
 
         function sendUsername() {
             username = document.getElementById("username_input").value;
-            console.log("currentRoom = " + currentroom);
+            document.getElementById("h1").innerHTML = "Current Room: Lobby";
             document.getElementById("userlog").style.display = 'none';
             document.getElementById("newroomlog").style.display = 'block';
             document.getElementById("joinroomlog").style.display = 'block';
             document.getElementById("sendmessage").style.display = 'block';
+            document.getElementById("chatlog").style.display = 'block';
             socketio.emit("username_to_server", { username: username, currentroom: currentroom });
 
         };
@@ -35,15 +37,17 @@
         function sendNewRoom() {
             console.log("sending to new room");
             let newroom = document.getElementById("newroom_input").value;
+            let newroompass = document.getElementById("newroompass_input").value;
             currentroom = newroom;
-            socketio.emit("newroom_to_server", { username: username, newroom: newroom });
+            socketio.emit("newroom_to_server", { username: username, newroom: newroom, newroompass: newroompass });
         };
 
         function sendJoinRoom() {
             console.log("sending you to join a room");
             let joinroom = document.getElementById("joinroom_input").value;
+            let joinroompass = document.getElementById("joinroompass_input").value;
             currentroom = joinroom;
-            socketio.emit("joinroom_to_server", { username: username, joinroom: joinroom });
+            socketio.emit("joinroom_to_server", { username: username, joinroom: joinroom, joinroompass: joinroompass });
         };
 
         function sendBan() {
@@ -68,14 +72,18 @@
         socketio.on("newroom_to_client", function (data) {
             console.log("Roomname" + data["roomname"]);
             console.log("Users" + data["users"]);
+            document.getElementById("h1").innerHTML = "Current Room: " + data["roomname"];
+            document.getElementById("h2").innerHTML = "Users " + data["users"];
             document.getElementById("banlog").style.display = 'block';
             document.getElementById("kicklog").style.display = 'block';
-            document.getElementById("privatelog").style.display= 'block';
+            document.getElementById("privatelog").style.display = 'block';
             document.getElementById("chatlog").appendChild(document.createElement("hr"));
-            document.getElementById("chatlog").appendChild(document.createTextNode(data["roomname"] + " has been created and entereed by " + data["users"]));
+            document.getElementById("chatlog").appendChild(document.createTextNode(data["roomname"] + " has been created and entered by " + data["users"]));
         });
 
         socketio.on("joinroom_to_client", function (data) {
+            document.getElementById("h1").innerHTML = "Current Room: " + data["roomname"];
+            document.getElementById("h2").innerHTML = "Users " + data["users"];
             document.getElementById("joinroomlog").innerHTML = "";
             document.getElementById("chatlog").appendChild(document.createElement("hr"));
             document.getElementById("chatlog").appendChild(document.createTextNode(data["username"] + " has entered " + data["roomname"]));
@@ -108,9 +116,21 @@
             document.getElementById("chatlog").appendChild(document.createTextNode(data["username"] + " cannot enter " + data["roomname"] + " because you have been banned "));
         })
 
+        socketio.on('incorrectpassword_to_client', function (data) {
+            document.getElementById("chatlog").appendChild(document.createElement("hr"));
+            document.getElementById("chatlog").appendChild(document.createTextNode("You entered the wrong password and therefore cannot enter the room"));
+        })
+
         socketio.on('username_to_client', function (data) {
+            document.getElementById("h2").innerHTML = "Users: " + data["currusers"];
             document.getElementById("chatlog").appendChild(document.createElement("hr"));
             document.getElementById("chatlog").appendChild(document.createTextNode("New user: " + data['username']));
+        });
+
+        socketio.on('disconnect_to_client', function (data) {
+            document.getElementById("h2").innerHTML = "Users: " + data["users"];
+            document.getElementById("chatlog").appendChild(document.createElement("hr"));
+            document.getElementById("chatlog").appendChild(document.createTextNode(data["name"] + " has left the room"));
         });
 
         socketio.on("message_to_client", function (data) {
@@ -130,6 +150,49 @@
 </head>
 
 <body>
+    <h1 id="h1">My ChatRoom </h1>
+    <h2 id="h2"></h2>
+
+    <style>
+        div {
+            width: 300;
+            padding: 10px 5px;
+            display: inline-block;
+            color: black;
+            font-size: 16px;
+            overflow: hidden;
+            position: relative;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        button {
+            background-color: rgba(63, 191, 63, 0.5);
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 15px;
+            color: black;
+            padding: 10px 5px;
+            cursor: pointer;
+            margin-top: 10px;
+
+        }
+
+        button:hover {
+            background-color: rgba(63, 191, 63, 0.2);
+            color: black;
+        }
+
+        input[type="text"] {
+            width: 200px;
+            height: 20px;
+            font-size: 15px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        h1,
+        h2 {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 
     <div id="chatlog">
         <input type="text" id="message_input" />
@@ -142,13 +205,16 @@
     </div>
 
     <div id="newroomlog" style="display:none">
-        <input type="text" id="newroom_input" />
-        <button onclick="sendNewRoom()"> Enter Room You Want to Create </button>
+        <input type="text" id="newroom_input" placeholder="Enter room name" />
+        <input type="text" id="newroompass_input" placeholder="Enter room password (optional)"" />
+        <button onclick=" sendNewRoom()"> Enter Room You Want to Create </button>
+
     </div>
 
     <div id="joinroomlog" style="display: none">
         <input type="text" id="joinroom_input" />
-        <button onclick="sendJoinRoom()">Enter Room You Want to Join</button>
+        <input type="text" id="joinroompass_input" placeholder="Enter room password (if private)"" />
+        <button onclick=" sendJoinRoom()">Enter Room You Want to Join</button>
     </div>
 
     <div id="banlog" style="display: none">
@@ -163,9 +229,12 @@
 
     <div id="privatelog" style="display: none">
         <input type="text" id="private_user_input" placeholder="Username" />
-        <input type="text" id="private_message_input" placeholder="Message"/>
+        <input type="text" id="private_message_input" placeholder="Message" />
         <button onclick="sendPrivate()">Enter User You Want to Send Private Message to and Message </button>
     </div>
+
+    </div>
+
 </body>
 
 </html>
