--- a/client.html
+++ b/client.html
@@ -24,12 +24,6 @@
 
         function sendUsername() {
             username = document.getElementById("username_input").value;
-            document.getElementById("h1").innerHTML = "Current Room: Lobby";
-            document.getElementById("userlog").style.display = 'none';
-            document.getElementById("newroomlog").style.display = 'block';
-            document.getElementById("joinroomlog").style.display = 'block';
-            document.getElementById("sendmessage").style.display = 'block';
-            document.getElementById("chatlog").style.display = 'block';
             socketio.emit("username_to_server", { username: username, currentroom: currentroom });
 
         };
@@ -67,25 +61,31 @@
             let privateuser = document.getElementById("private_user_input").value;
             let privatemessage = document.getElementById("private_message_input").value;
             console.log("currentroom");
-            socketio.emit("private_to_server", { privateuser: privateuser, privatemessage: privatemessage, room: currentroom })
+            socketio.emit("private_to_server", { privateuser: privateuser, privatemessage: privatemessage })
         }
 
         socketio.on("newroom_to_client", function (data) {
             console.log("Roomname" + data["roomname"]);
             console.log("Users" + data["users"]);
             document.getElementById("h1").innerHTML = "Current Room: " + data["roomname"];
+            document.getElementById("h2").innerHTML = "";
             document.getElementById("h2").innerHTML = "Users " + data["users"];
             document.getElementById("banlog").style.display = 'block';
             document.getElementById("kicklog").style.display = 'block';
             document.getElementById("privatelog").style.display = 'block';
+            document.getElementById("newroomlog").style.display = 'none';
+            document.getElementById("joinroomlog").style.display = 'none';
             document.getElementById("chatlog").appendChild(document.createElement("hr"));
             document.getElementById("chatlog").appendChild(document.createTextNode(data["roomname"] + " has been created and entered by " + data["users"]));
         });
 
         socketio.on("joinroom_to_client", function (data) {
             document.getElementById("h1").innerHTML = "Current Room: " + data["roomname"];
+            document.getElementById("h2").innerHTML = "";
             document.getElementById("h2").innerHTML = "Users " + data["users"];
-            document.getElementById("joinroomlog").innerHTML = "";
+            document.getElementById("joinroomlog").style.display = 'none';
+            document.getElementById("privatelog").style.display = 'block';
+            document.getElementById("newroomlog").style.display = 'none';
             document.getElementById("chatlog").appendChild(document.createElement("hr"));
             document.getElementById("chatlog").appendChild(document.createTextNode(data["username"] + " has entered " + data["roomname"]));
             document.getElementById("chatlog").appendChild(document.createElement("hr"));
@@ -108,8 +108,14 @@
         });
 
         socketio.on("kick_to_client", function (data) {
+            document.getElementById("h1").innerHTML = "Current Room: Lobby";
+            document.getElementById("joinroomlog").style.display = 'block';
+            document.getElementById("newroomlog").style.display = 'block';
+            document.getElementById("privatelog").style.display = 'none';
+            document.getElementById("h2").innerHTML = "";
+            document.getElementById("h2").innerHTML = "Users: " + data["users"];
             document.getElementById("chatlog").appendChild(document.createElement("hr"));
-            document.getElementById("chatlog").appendChild(document.createTextNode(data["data"] + " has been kicked out "));
+            document.getElementById("chatlog").appendChild(document.createTextNode(data["kickeduser"] + " has been kicked out"));
         })
 
         socketio.on("bannedfromroom_to_client", function (data) {
@@ -123,15 +129,25 @@
         })
 
         socketio.on('username_to_client', function (data) {
+            console.log(data);
+            document.getElementById("h1").innerHTML = "Current Room: Lobby";
+            document.getElementById("userlog").style.display = 'none';
+            document.getElementById("newroomlog").style.display = 'block';
+            document.getElementById("joinroomlog").style.display = 'block';
+            document.getElementById("sendmessage").style.display = 'block';
+            document.getElementById("chatlog").style.display = 'block';
+            document.getElementById("h2").innerHTML = "";
             document.getElementById("h2").innerHTML = "Users: " + data["currusers"];
+            document.getElementById("h3").innterHTML = "Active Rooms: " + data["allrooms"];
             document.getElementById("chatlog").appendChild(document.createElement("hr"));
             document.getElementById("chatlog").appendChild(document.createTextNode("New user: " + data['username']));
         });
 
         socketio.on('disconnect_to_client', function (data) {
+            document.getElementById("h2").innerHTML = "";
             document.getElementById("h2").innerHTML = "Users: " + data["users"];
             document.getElementById("chatlog").appendChild(document.createElement("hr"));
-            document.getElementById("chatlog").appendChild(document.createTextNode(data["username"] + " has left the room"));
+            // document.getElementById("chatlog").appendChild(document.createTextNode(data["username"] + " has left " + data["room"]));
         });
 
         socketio.on("message_to_client", function (data) {
@@ -140,9 +156,10 @@
             document.getElementById("chatlog").appendChild(document.createTextNode(data['username'] + ": " + data['message']));
         });
 
-        socketio.on("private_to_client", function (from, privatemessage) {
-            document.getElementById("privatelog").appendChild(document.createElement("hr"));
-            document.getElementById("privatelog").appendChild(document.createTextNode(from + " has sent a private message: " + message));
+        socketio.on("private_to_client", function (data) {
+            console.log(data["message"]);
+            document.getElementById("chatlog").appendChild(document.createElement("hr"));
+            document.getElementById("chatlog").appendChild(document.createTextNode(data["from"] + " has sent a private message: " + data["message"]));
         });
 
 
@@ -153,6 +170,7 @@
 <body>
     <h1 id="h1">My ChatRoom </h1>
     <h2 id="h2"></h2>
+    <h3 id="h3"></h3>
 
     <style>
         div {
